--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ default = [ "util" ]
 
 [dependencies]
 embedded-hal = { version = "0.2.3", features = ["unproven"] }
+crc = { version = "1.8.1", features = [] }
+log = "0.4.8"
 
 structopt = { version = "0.2.15", optional = true }
 linux-embedded-hal = { version = "0.2.2", optional = true }
@@ -22,6 +24,8 @@ humantime = { version = "1.2.0", optional = true }
 
 [dev-dependencies]
 color-backtrace = "0.1.3"
+embedded-hal-mock = "0.7.0"
+assert_approx_eq = "1.1.0"
 
 [[bin]]
 name = "sdc30-util"
